2001-07-17  Al Riddoch  <alriddoch@zepler.org>

	* src/Exception.h: Added exception base class, with string
	  description.

	* src/Objects/loadDefaults.h, src/Objects/BaseObject.h,
	  src/Message/Object.h: Modify exception classes to derive from
	  exception base class.

	* src/Objects/loadDefaults.cpp, src/Objects/BaseObject.cpp: Re-style
	  code for consistancy and readability.

	* src/Message/Object.h: Added feature to Message::Object so it
	  can store pointers properlly.

	* src/Objects/GenerateObjectFactory.py: Make generated code ISO
	  conformant, and more readable.

	* src/Objects/common.py: Updated copyright date for generated files.

2001-07-15  Al Riddoch  <alriddoch@zepler.org>

	* Added interface and library versioning.

2001-07-15  Al Riddoch  <alriddoch@zepler.org>

	* src/Net/Stream.cpp, src/Objects/BaseObject.cpp,
	  src/Objects/loadDefaults.cpp: Fixed code for strict ISO
	  conformance; mainly strict use of std:: namespace.

2001-07-15  Al Riddoch  <alriddoch@zepler.org>

	* src/Message/Object.h, src/Message/Object.cpp: Removed buggy and
	  largely unused memory pool code.

	* src/Objects/loadDefaults.cpp: Removed double use of find()
	  method, and re-styled code to fit in with the rest of Atlas-C++.

	* src/Net/Stream.cpp: Switched negotiation code over to picking
	  Packed by default.

	* src/Filters/Bzip2.cpp: Modified code to use latest Bzip2 API.

	* src/Codecs/Packed.cpp: Fixed beginning and ending of stream,
	  which does not have an encoding in Packed.

	* NEWS, HACKING: updated.

2001-05-06  Al Riddoch  <alriddoch@zepler.org>

        * src/Message/Object.cpp: Added true cpp file so that class static
          member is handled cleanly.

        * src/Message/Object.h: Moved clear and operator new/delete()
          functions around so they can be inlined.

        * src/Net/Stream.cc: Added ATLAS to greeting message as required
          by the Atlas protocol.
