@@ -5,12 +5,11 @@
 #ifndef ATLAS_MESSAGE_ENCODER_H
 #define ATLAS_MESSAGE_ENCODER_H
 
-#include <string>
 #include "../EncoderBase.h"
-#include "../Bridge.h"
-#include "Object.h"
 
 namespace Atlas { namespace Message {
+
+class Object;
 
 /** Encoder that transmits Atlas::Message::Object.
  *
